--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "node server",
-    "start": "../app/server/server.js"
+    "start": "server.js"
   },
   "repository": {
     "type": "git",
