--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "bookshelf": "^0.10.0",
     "express": "^4.14.0",
     "grunt": "^1.0.1",
-    "knex": "^0.11.7"
+    "knex": "^0.11.7",
+    "mongodb": "^2.2.1",
+    "mongoose": "^4.5.3"
   },
   "devDependencies": {
     "grunt": "^1.0.1"
