--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "mustache": "^2.2.1",
     "nodemon": "^1.9.2",
     "passport": "^0.3.2",
-    "passport-facebook": "^2.1.1"
+    "passport-facebook": "^2.1.1",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {
     "grunt": "^1.0.1"
