--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.14.0",
     "grunt": "^1.0.1",
     "knex": "^0.11.7",
+    "lodash": "^4.13.1",
     "mongodb": "^2.2.1",
     "mongoose": "^4.5.3"
   },
