added mocha test for adding new user to database

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body": "^5.1.0",
     "body-parser": "^1.15.2",
     "bookshelf": "^0.10.0",
+    "chai": "^3.5.0",
     "consolidate": "^0.14.1",
     "express": "^4.14.0",
     "express-session": "^1.14.0",
@@ -34,10 +35,9 @@
     "mongodb": "^2.2.1",
     "mongoose": "^4.5.3",
     "morgan": "^1.7.0",
-    "parser": "^0.1.4",
-    "morgan": "^1.7.0",
     "mustache": "^2.2.1",
     "nodemon": "^1.9.2",
+    "parser": "^0.1.4",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "traitify": "^2.2.0",
