--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,8 @@
   ],
   "dependencies": {
     "angular": "^1.5.7",
-    "angular-route": "^1.5.7"
+    "angular-route": "^1.5.7",
+    "angular-animate": "^1.5.7",
+    "bootstrap": "^3.3.6"
   }
 }
