--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "angular": "^1.5.7",
     "angular-route": "^1.5.7",
     "angular-animate": "^1.5.7",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "angular-bootstrap": "^1.3.3"
   }
 }
